--- a/templates/github/dotnet/build.yml
+++ b/templates/github/dotnet/build.yml
@@ -1,7 +1,6 @@
 inputs:
   version:
-    default: 1.0.0
-    required: false
+    required: true
 jobs:
   steps:
     - name: Clean workspace
@@ -9,10 +8,10 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore --nologo --verbosity normal *.sln
     - name: Collect code quality data
-      run: dotnet sonarscanner begin /d:sonar.cs.vscoveragexml.reportsPaths=.artifacts/coverage/report.xml /d:sonar.host.url=$env.sonar_host_url /d:sonar.token=$secrets.sonar_project_token /d:sonar.verbose=true /k:$env.sonar_project_key /v:$input.version
+      run: dotnet sonarscanner begin /d:sonar.cs.vscoveragexml.reportsPaths=.artifacts/coverage/report.xml /d:sonar.host.url=$env.sonar_host_url /d:sonar.token=$secrets.sonar_project_token /d:sonar.verbose=true /k:$env.sonar_project_key /v:$inputs.version
     - name: Build dotnet solution
-      run: dotnet build --configuration Release --nologo --no-restore --verbosity normal -p:Version=$input.version *.sln
+      run: dotnet build --configuration Release --nologo --no-restore --verbosity normal -p:Version=$inputs.version *.sln
     - name: Collect code coverage data
-      run: dotnet-coverage collect "dotnet test --configuration Release --no-build --nologo --no-restore --verbosity normal *.UTests.csproj" -f xml -o .artifacts/coverage/report.xml
+      run: dotnet-coverage collect "dotnet test --configuration Release --no-build --nologo --no-restore --verbosity normal *.Tests.Unit.csproj" -f xml -o .artifacts/coverage/report.xml
     - name: Publish code quality data
       run: dotnet sonarscanner end /d:sonar.token=$secrets.sonar_project_token
