--- a/templates/github/nuget/build.yml
+++ b/templates/github/nuget/build.yml
@@ -1,8 +1,7 @@
 inputs:
   version:
-    default: 1.0.0
     required: false
 jobs:
   steps:
     - name: Build nuget packages
-      run: dotnet pack --configuration Release --include-source --include-symbols --nologo --no-restore --output .artifacts/packages --verbosity normal -p:PackageVersion=$input.version *.sln
+      run: dotnet pack --configuration Release --include-source --include-symbols --nologo --no-restore --output .artifacts/packages --verbosity normal -p:PackageVersion=$inputs.version *.sln
