--- a/.github/workflows/examples_dotnet_build.yml
+++ b/.github/workflows/examples_dotnet_build.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches: [ main ]
     paths: [ "examples/dotnet/**" ]
+  push:
+    branches: [ main ]
   workflow_dispatch:
 jobs:
   checkout:
