- Added path filter to push event

--- a/.github/workflows/examples_dotnet_build.yml
+++ b/.github/workflows/examples_dotnet_build.yml
@@ -9,6 +9,7 @@ on:
     paths: [ "examples/dotnet/**" ]
   push:
     branches: [ main ]
+    paths: [ "examples/dotnet/**" ]
   workflow_dispatch:
 jobs:
   checkout:
