--- a/.github/workflows/examples_dotnet_build.yml
+++ b/.github/workflows/examples_dotnet_build.yml
@@ -1,4 +1,4 @@
-name: Release workflow
+name: Build workflow
 defaults:
   run:
     shell: bash
@@ -25,16 +25,16 @@ jobs:
     needs: checkout
     runs-on: self-hosted
     steps:
-      - uses: ./templates/github/artifacts/version.yml
-      - uses: ./templates/github/dotnet/build.yml
+      - uses: ./.github/actions/artifacts-build-version/action.yml
+      - uses: ./.github/actions/dotnet-build/action.yml
         with:
           version: $env.artifacts_version_preview
-      - uses: ./templates/github/code_coverage/publish.yml
+      - uses: ./.github/actions/publish-code-coverage/action.yml
         with:
           version: $env.artifacts_version_preview
-      - uses: ./templates/github/nuget/build.yml
+      - uses: ./.github/actions/nuget-build/action.yml
         with:
           version: $env.artifacts_version_preview
-      - uses: ./templates/github/nuget/publish.yml
+      - uses: ./.github/actions/nuget-publish/action.yml
         with:
           version: $env.artifacts_version_preview
