--- a/.github/workflows/examples_dotnet_release.yml
+++ b/.github/workflows/examples_dotnet_release.yml
@@ -1,4 +1,4 @@
-name: Release workflow
+name: Release .NET solution (example)
 defaults:
   run:
     shell: bash
@@ -19,16 +19,16 @@ jobs:
     needs: checkout
     runs-on: self-hosted
     steps:
-      - uses: ./templates/github/artifacts/version.yml
-      - uses: ./templates/github/dotnet/build.yml
+      - uses: josemaria-toro/github/.github/actions/artifacts-build-version@main
+      - uses: josemaria-toro/github/.github/actions/dotnet-build@main
         with:
           version: $env.artifacts_version
-      - uses: ./templates/github/code_coverage/publish.yml
+      - uses: josemaria-toro/github/.github/actions/publish-code-coverage@main
         with:
           version: $env.artifacts_version
-      - uses: ./templates/github/nuget/build.yml
+      - uses: josemaria-toro/github/.github/actions/nuget-build@main
         with:
           version: $env.artifacts_version
-      - uses: ./templates/github/nuget/publish.yml
+      - uses: josemaria-toro/github/.github/actions/nuget-publish@main
         with:
           version: $env.artifacts_version
