--- a/.github/workflows/examples_dotnet_build.yml
+++ b/.github/workflows/examples_dotnet_build.yml
@@ -25,19 +25,19 @@ jobs:
     needs: checkout
     runs-on: self-hosted
     steps:
-      - uses: josemaria-toro/templates/actions/artifacts-build-version@main
-      - uses: josemaria-toro/templates/actions/dotnet-build@main
+      - uses: josemaria-toro/templates/actions/artifacts-build-version@v1.0.0
+      - uses: josemaria-toro/templates/actions/dotnet-build@v1.0.0
         with:
           sonar_host_url: "http://10.0.0.14:9000"
           sonar_project_key: "examples"
           sonar_project_token: "sqp_be0f09c2d85f70e0e0f9fbed3944c71146115314"
           version: $env.artifacts_version_preview
-      - uses: josemaria-toro/templates/actions/publish-code-coverage@main
+      - uses: josemaria-toro/templates/actions/publish-code-coverage@v1.0.0
         with:
           version: $env.artifacts_version_preview
-      - uses: josemaria-toro/templates/actions/nuget-build@main
+      - uses: josemaria-toro/templates/actions/nuget-build@v1.0.0
         with:
           version: $env.artifacts_version_preview
-      - uses: josemaria-toro/templates/actions/nuget-publish@main
+      - uses: josemaria-toro/templates/actions/nuget-publish@v1.0.0
         with:
           version: $env.artifacts_version_preview
