--- a/.github/workflows/examples_dotnet_build.yml
+++ b/.github/workflows/examples_dotnet_build.yml
@@ -7,16 +7,7 @@ on:
     branches: [ main ]
     paths: [ "examples/dotnet/**" ]
   workflow_dispatch:
-env:
-  workspace: examples/dotnet
 jobs:
-  print_info:
-    name: Print information
-    runs-on: self-hosted
-    steps:
-      - uses: josemaria-toro/templates/actions/print-info@v1.0.0
-        with:
-          workspace: ${{ env.workspace }}
   checkout:
     name: Checkout
     runs-on: self-hosted
@@ -28,10 +19,15 @@ jobs:
       sonar_host_url: "http://10.0.0.14:9000"
       sonar_project_key: "examples"
       sonar_project_token: "sqp_be0f09c2d85f70e0e0f9fbed3944c71146115314"
+      workspace: examples/dotnet
     name: Build
     needs: checkout
     runs-on: self-hosted
     steps:
+      - name: Print information
+        uses: josemaria-toro/templates/actions/print-info@v1.0.0
+        with:
+          workspace: ${{ env.workspace }}
       - uses: josemaria-toro/templates/actions/artifacts-build-version@v1.0.0
       - uses: josemaria-toro/templates/actions/dotnet-build@v1.0.0
         with:
